# coco-io

./: CMakeLists.txt  README.md  conanfile.py
coco/: CMakeLists.txt  DummyOutputPort.cpp  DummyOutputPort.hpp  InOut.cpp  InOut.hpp  InOutPins.cpp  InOutPins.hpp  InOutPort.cpp  InOutPort.hpp  Input.cpp  Input.hpp  InputPins.cpp  InputPins.hpp  InputPort.cpp  InputPort.hpp  Output.cpp  Output.hpp  OutputPins.cpp  OutputPins.hpp  OutputPins_nop.cpp  OutputPins_nop.hpp  OutputPort.cpp  OutputPort.hpp  Trigger.cpp  Trigger.hpp
coco/emu/coco/platform/: GuiRotaryButton.cpp  GuiRotaryButton.hpp  RotaryButton_emu.cpp  RotaryButton_emu.hpp  RotaryKnob_emu.cpp  RotaryKnob_emu.hpp
coco/gpio/coco/platform/: InOutPort_GPIO.cpp  InOutPort_GPIO.hpp  InputPort_GPIO.cpp  InputPort_GPIO.hpp  OutputPort_GPIO.cpp  OutputPort_GPIO.hpp
coco/native/coco/platform/: InOutOut.cpp  InOutOut.hpp  InOutPins_cout.cpp  InOutPins_cout.hpp  InOutPort_cout.cpp  InOutPort_cout.hpp  InOut_cout.cpp  InOut_cout.hpp  InputPins_cout.cpp  InputPins_cout.hpp  InputPort_cout.cpp  InputPort_cout.hpp  Input_cout.cpp  Input_cout.hpp  OutputPins_cout.cpp  OutputPins_cout.hpp  OutputPort_cout.cpp  OutputPort_cout.hpp  Output_cout.cpp  Output_cout.hpp  Trigger_cout.cpp  Trigger_cout.hpp
coco/nrf52/coco/platform/: InOutPins_GPIO.cpp  InOutPins_GPIO.hpp  InOut_GPIO.cpp  InOut_GPIO.hpp  InputDevice_GPIOTE_RTC.cpp  InputDevice_GPIOTE_RTC.hpp  InputPins_GPIO.cpp  Input_GPIO.hpp  OutputPins_GPIO.cpp  OutputPins_GPIO.hpp  Output_GPIO.cpp  Output_GPIO.hpp  RotaryButton_QDEC_GPIOTE.cpp  RotaryButton_QDEC_GPIOTE.hpp  Trigger_GPIOTE_RTC0.cpp  Trigger_GPIOTE_RTC0.hpp
coco/stm32/coco/platform/: InputDevice_EXTI_TIM.cpp  InputDevice_EXTI_TIM.hpp
coco/stm32f0/coco/platform/: Buttons_EXTI.cpp  Buttons_EXTI.hpp  InOutPins_GPIO.cpp  InOutPins_GPIO.hpp  InOut_GPIO.cpp  InOut_GPIO.hpp  InputPins_GPIO.hpp  Input_GPIO.cpp  Input_GPIO.hpp  OutputPins_GPIO.cpp  OutputPins_GPIO.hpp  Output_GPIO.cpp  Output_GPIO.hpp  Trigger_EXTI_TIM2.cpp  Trigger_EXTI_TIM2.hpp
test/: CMakeLists.txt  InOutPinsTest.cpp  InOutPortTest.cpp  InOutTest.cpp  InputDeviceTest.cpp  InputTest.cpp  TriggerTest.cpp
test/emu/: InputDeviceTest.hpp  InputTest.hpp
test/native/: InOutPinsTest.hpp  InOutPortTest.hpp  InOutTest.hpp  TriggerTest.hpp
test/nrf52dongle/: InOutPinsTest.hpp  InOutPortTest.hpp  InOutTest.hpp  InputDeviceTest.hpp  InputTest.hpp  TriggerTest.hpp
test/pcb/RotaryButton/: RotaryButton.kicad_pcb  RotaryButton.kicad_pro  RotaryButton.kicad_sch
test/pcb/local.pretty/: PEC12R-4217F-S0024.kicad_mod  PEC12R-4217F-S0024.wrl  footprints.json
test/stm32f051discovery/: InOutPinsTest.hpp  InOutTest.hpp  InputTest.hpp  TriggerTest.hpp
test/stm32f0discovery/: InOutPortTest.hpp  InputDeviceTest.hpp
test/stm32f3348discovery/: InputDeviceTest.hpp
test/stm32g431nucleo/: InOutPinsTest.hpp  InOutPortTest.hpp  InputTest.hpp
test/stm32g474nucleo/: InputDeviceTest.hpp
